@@ -26,7 +26,9 @@ $HTMLOUT = '';
 $dt = TIME_NOW;
 
 if (!isset($_GET['id']) || !is_valid_id($_GET['id'])) {
-    stderr("{$lang['details_user_error']}", "{$lang['details_bad_id']}{$_GET['id']}");
+    $session->set('is-warning', "[h3]{$lang['details_user_error']}[/h3] {$lang['details_bad_id']}{$_GET['id']}");
+    header("Location: {$site_config['baseurl']}/index.php");
+    die();
 }
 $id = (int) $_GET['id'];
 if (isset($_GET['uploaded'])) {
@@ -68,6 +70,11 @@ if ($torrents === false || is_null($torrents)) {
         ->fetch();
 
     $cache->set('torrent_details_' . $id, $torrents, $site_config['expires']['torrent_details']);
+}
+if (empty($torrents)) {
+    $session->set('is-warning', "[h3]{$lang['details_user_error']}[/h3] {$lang['details_bad_id']}{$_GET['id']}");
+    header("Location: {$site_config['baseurl']}/index.php");
+    die();
 }
 
 $torrents['imdb'] = '';
